--- a/frontend.html
+++ b/frontend.html
@@ -51,12 +51,19 @@
         text-shadow: 0 1xp 3xp rgba(0, 0, 0, 0.3);
         box-shadow: 0 4xp 6xp rgba(0, 0, 0, 0.1);
     }
+    footer{
+        background: linear-gradient(13deg, #272727 0%, #7e7e7e 50%, #e4e4e4 100%);
+        color: black;
+        text-align: center;
+        padding: 1rem;
+        margin-top: auto;
+    }
 </style>
 </head>
 <body>
 <!-- Conteúdo da página aqui -->
  <header>
-    <h1>Como Treinar seu Dragão_1</h1>
+    <h1>Como Treinar seu Dragão</h1>
     <p></p>
  </header>
 </body>
