--- a/frontend.html
+++ b/frontend.html
@@ -66,5 +66,8 @@
     <h1>Como Treinar seu Dragão</h1>
     <p></p>
  </header>
+ <footer>
+    <p>°2025 Começamdo tudo do inicio</p>
+ </footer>
 </body>
 </html>
